# saekkutu

./: .gitignore  Cargo.toml  package.json  pnpm-lock.yaml  turbo.json
apps/game-server/: README.md  package.json  tsconfig.json
apps/game-server/src/: connection.ts  index.ts  room.ts  server.ts  user.ts
apps/game-server/src/handlers/: ChatMessageHandler.ts  CreateRoomHandler.ts  LoginHandler.ts  PingHandler.ts  RoomJoinHandler.ts  RoomLeaveHandler.ts  index.ts
apps/web/: package.json  vite.config.ts
apps/web/src/: app.css  app.html  global.d.ts
apps/web/src/lib/client/: index.ts
apps/web/src/lib/client/handlers/: ChatBroadcastHandler.ts  HelloHandler.ts  PongHandler.ts  ReadyHandler.ts  RoomInfoRemoveHandler.ts  RoomInfoUpdateHandler.ts  UserInfoRemoveHandler.ts  UserInfoUpdateHandler.ts  index.ts
apps/web/src/lib/components/game/: Button.svelte  GameScreen.svelte  Input.svelte  MenuBar.svelte  MyInfo.svelte  RoomList.svelte  UserList.svelte
apps/web/src/lib/components/game/Dialog/: CreateRoom.svelte  Root.svelte  index.ts
apps/web/src/lib/components/game/RoomList/: Item.svelte  Root.svelte  index.ts
apps/web/src/lib/components/game/chat/: Item.svelte  Root.svelte  index.ts
apps/web/src/lib/stores/: audios.ts  chat.ts  dialogs.ts  rooms.ts  users.ts
apps/web/src/lib/utils/: AudioSource.ts  index.ts
apps/web/src/routes/: +layout.svelte  +page.svelte
apps/web/src/routes/room/[id]/: +page.svelte  +page.ts
apps/websocket/: .env.local  Cargo.toml  build.rs  package.json
apps/websocket/src/: lib.rs  main.rs
(+14 files in other folders)
