[package]
name = "websocket"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-tungstenite.workspace = true
dotenvy.workspace = true
futures-channel.workspace = true
tokio = { workspace = true, features = ["full"]}
futures-util.workspace = true
prost.workspace = true

[build-dependencies]
prost-build.workspace = true
